# spark

./: .gitignore  pyproject.toml
docs/: design-document.md  pdm-generation-guide.md
output/: pdm_output.xlsx  physical_model.xlsx
output/ddl/iceberg/: dim_collections_status.sql  dim_merchant.sql  fact_account_transaction_agg.sql
output/ddl/parquet/: dim_collections_status.sql  dim_risk_score.sql  fact_balance_detail.sql  fact_card_account.sql
output/etl/pyspark/: load_dim_risk_score.py  load_fact_balance_detail.py
output/etl/sql/: load_dim_merchant.sql  load_dim_risk_score.sql  load_fact_balance_detail.sql  load_fact_card_account.sql
spark_pdm_generator/: __init__.py  cli.py  pipeline.py  pipeline_lite.py
spark_pdm_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spark_pdm_generator/emitters/: ddl_builder.py  diagram_common.py  diagram_emitter.py  drawio_emitter.py  etl_builder.py  excel_emitter.py
spark_pdm_generator/engine/: classifier.py  denormalizer.py  estimator.py  optimizer.py  overrides.py  partitioner.py  utils.py
spark_pdm_generator/models/: graph.py  logical.py  physical.py
spark_pdm_generator/parsers/: column_mapper.py  excel_parser.py  inspector.py  lite_parser.py  utils.py
spark_pdm_generator/rules/: defaults.py
tests/: create_sample_workbook.py  sample_aggressive_input.xlsx  sample_input.xlsx
tests/output/: aggressive_test.xlsx  auto_test.xlsx
tests/output/aggressive/ddl/iceberg/: fact_card_account.sql
tests/output/aggressive/ddl/parquet/: fact_card_account.sql
(+13 files in other folders)
