[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-pdm-generator"
version = "0.1.0"
description = "Deterministic rule engine that transforms logical/OLTP data models into Spark/Parquet-optimized physical models"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
spark-pdm = "spark_pdm_generator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["spark_pdm_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
